--- a/exercises/practice/rna-transcription/.meta/config.json
+++ b/exercises/practice/rna-transcription/.meta/config.json
@@ -35,7 +35,7 @@
       "Cargo.toml"
     ],
     "test": [
-      "tests/rna-transcription.rs"
+      "tests/rna_transcription.rs"
     ],
     "example": [
       ".meta/example.rs"
